--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = coord"
+    "ba_latitude = coordinates[]"
    ]
   },
   {
